--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
